[package]
name = "ext2-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`



[[bin]]
name = "test"
path = "src/bin/main.rs"

[lib]
name = "ext2"
path = "src/lib.rs"

[dependencies]
bitflags = { version = "2.4.1", features = [] }
